--- a/Site_espaco/index.html
+++ b/Site_espaco/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/index.css">
     <script defer src="script.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-database.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.5/firebase-database.js"></script> -->
     <title>Calendário</title>
 </head>
 <body>
@@ -29,5 +29,12 @@
             </div>
         </div>
     </div>
+
+    <!-- <div class="info-container popup">
+        <h1>Name</h1>
+        <p>Horario</p>
+        <p>Valor para pagar</p>
+        <p>Valor pago</p>
+    </div> -->
 </body>
 </html>
